2007-02-28  Jakub Steiner <jimmac@ximian.com>

	* system-software-installer: generic installer icon

2007-02-27  Jakub Steiner <jimmac@ximian.com>

	* mail-attachment: Andreas Nilsson's contribution

2007-02-20  Jakub Steiner <jimmac@ximian.com>

	* {32x32,scalable}/actions/edit-paste: not critically needed, but
	a byproduct of a 'Tasks' app icon for Ross ;)

2007-02-18  Jakub Steiner <jimmac@ximian.com>

	* {32x32,scalable}/devices/input-mouse: fix the shape to be more
		life-like

2007-02-18  Jakub Steiner <jimmac@ximian.com>

	* {22x22,24x24}/apps/gnome-settings-ui-properties: move left a little

2007-02-18  Jakub Steiner <jimmac@ximian.com>

	* input-tablet: include a generic device icon from Sebastian Kraft

2007-02-17  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/preferences-desktop-locale.png: forgot to add

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* config-language: remove old icons replaced by preferences-desktop-locale

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* user-info: CC Applet. Fixes #408585.

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* gnome-settings-ui-behavior: CC Applet. Fixes #397310. Crappy naming.

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-locale: based on work by Andreas Nilsson, I
		think. Fixes #408673

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* 32x32/mimetypes/text-x-generic.svg: fix metadata

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* camera-web: tweaked shading on the vdepizzol's contributed
		artwork. Used for web camera devices.

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-accessibility: Replacement icon from Andreas
		Nilsson. Fixes bug #408594.

2007-02-15  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/document-revert.*: new icons.

2007-02-15  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop: 32x32 and scalable versions of
	preferences-desktop category icon. Fixes #395130

2007-02-15  Jakub Steiner <jimmac@ximian.com>
