@@ -1,3 +1,7 @@
+2007-03-01  Jakub Steiner <jimmac@ximian.com>
+
+	* index.theme.in: categories weren't listed in 32x32 and scalable
+
 2007-02-28  Jakub Steiner <jimmac@ximian.com>
 
 	* system-software-installer: generic installer icon
